bad/return_array_in_func_returning_bool.example_compiler_output
ERROR
[1mbad/return_array_in_func_returning_bool.lat:2:25: [1;31merror: [0;1mreturned value of type `int[]` is not convertible to return type `boolean`[m
boolean test() { return new int[3]; }
                        [1;32m^[m
